--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
